logs/gritty.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/pygame'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Gritty-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/gritty'...
Compiling './lib/python3.5/site-packages/gritty/__init__.py'...
***   File "./lib/python3.5/site-packages/gritty/__init__.py", line 221
    def __getitem__(self, (x, y)):
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gritty/demos'...
Compiling './lib/python3.5/site-packages/gritty/demos/game_of_life.py'...
***   File "./lib/python3.5/site-packages/gritty/demos/game_of_life.py", line 52
    def update_cell((x, y)):
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gritty/demos/large_grid.py'...
***   File "./lib/python3.5/site-packages/gritty/demos/large_grid.py", line 31
    print "Loading grid..."
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gritty/demos/multi_select.py'...
***   File "./lib/python3.5/site-packages/gritty/demos/multi_select.py", line 22
    def get_selection((x1, y1)):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gritty/demos/select.py'...
***   File "./lib/python3.5/site-packages/gritty/demos/select.py", line 39
    def wrap((x, y), (ox, oy)):
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygame'...
Listing './lib/python3.5/site-packages/pygame/.libs'...
Listing './lib/python3.5/site-packages/pygame/docs'...
Listing './lib/python3.5/site-packages/pygame/docs/ref'...
Listing './lib/python3.5/site-packages/pygame/examples'...
Listing './lib/python3.5/site-packages/pygame/examples/data'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example/English.lproj'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example/English.lproj/MainMenu.nib'...
Listing './lib/python3.5/site-packages/pygame/gp2x'...
Listing './lib/python3.5/site-packages/pygame/tests'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures/fonts'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures/xbm_cursors'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/all_ok'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/everything'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/exclude'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/failures1'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/incomplete'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/incomplete_todo'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/infinite_loop'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/print_stderr'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/print_stdout'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/timeout'...
Listing './lib/python3.5/site-packages/pygame/tests/test_utils'...
Listing './lib/python3.5/site-packages/pygame/threads'...
Listing './lib/python3.5/site-packages/pygame-1.9.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
